apps/immich/httproute.yaml
---
# Needed since there is HTTPRoute in helm chart
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  hostnames:
    - immich.fuochi.top
  parentRefs:
    - name: star-fuochi-top
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      matches:
        - path:
            type: PathPrefix
            value: /
